Localization for e-client
Former-commit-id: 13c80072912c7a4371f6db3cfc40a6a510a4ed68 [formerly 695f52142742e6d113a7486583954e439a0fe421]
Former-commit-id: 24027739cad9d5d01701a6c8925693045f77d9c6

--- a/ExViewer/Strings/en/Resources.resw
+++ b/ExViewer/Strings/en/Resources.resw
@@ -123,4 +123,7 @@
   <data name="AppDisplayName" xml:space="preserve">
     <value>E-Viewer</value>
   </data>
+  <data name="ErrorPrefix" xml:space="preserve">
+    <value>The text associated with this error code could not be found.</value>
+  </data>
 </root>
