ScrollBar, keyboard tip, New DB design, Bug fix
Former-commit-id: 0a693bbd0c0aee8f02d95a08259a098d692ddc56 [formerly f3d759ef6b6dec163c4a4b01e6600b5958fd42e1]
Former-commit-id: 64807021816ce4f5fa328e138a96b790457aee0e

--- a/ExClient/Strings/en/Resources.resw
+++ b/ExClient/Strings/en/Resources.resw
@@ -138,6 +138,9 @@
   <data name="Doujinshi" xml:space="preserve">
     <value>Doujinshi</value>
   </data>
+  <data name="ExpungedTorrent" xml:space="preserve">
+    <value>This torrent has beem expunged.</value>
+  </data>
   <data name="GameCG" xml:space="preserve">
     <value>Game CG</value>
   </data>
