--- a/ExClient/Strings/zh-cn/Resources.resw
+++ b/ExClient/Strings/zh-cn/Resources.resw
@@ -135,6 +135,12 @@
   <data name="Cosplay" xml:space="preserve">
     <value>Cosplay</value>
   </data>
+  <data name="DefaultTitle" xml:space="preserve">
+    <value>画集标题</value>
+  </data>
+  <data name="DefaultUploader" xml:space="preserve">
+    <value>上传者</value>
+  </data>
   <data name="Doujinshi" xml:space="preserve">
     <value>Doujinshi</value>
   </data>
