--- a/ExViewer/Strings/en/Resources.resw
+++ b/ExViewer/Strings/en/Resources.resw
@@ -123,6 +123,41 @@
   <data name="AppDisplayName" xml:space="preserve">
     <value>E-Viewer</value>
   </data>
+  <data name="BackToWindow" xml:space="preserve">
+    <value>Back to window</value>
+  </data>
+  <data name="BooleanOff" xml:space="preserve">
+    <value>Off</value>
+  </data>
+  <data name="BooleanOn" xml:space="preserve">
+    <value>On</value>
+  </data>
+  <data name="Cancel" xml:space="preserve">
+    <value>Cancel</value>
+  </data>
+  <data name="ClearCacheDialogContent" xml:space="preserve">
+    <value>All saved galleries will be deleted.</value>
+  </data>
+  <data name="ClearCacheDialogTitle" xml:space="preserve">
+    <value>ARE YOU SURE</value>
+  </data>
+  <data name="Exit" xml:space="preserve">
+    <value>Exit</value>
+  </data>
+  <data name="FullScreen" xml:space="preserve">
+    <value>Full screen</value>
+  </data>
+  <data name="GalleryDeleted" xml:space="preserve">
+    <value>Selected gallery has been deleted.</value>
+  </data>
+  <data name="GallerySavedTo" xml:space="preserve">
+    <value>Selected gallery has been saved to provided location.</value>
+  </data>
+  <data name="ImageFileInfo" xml:space="preserve">
+    <value>File name: {1}
+Size: {2}
+Dimensions: {3} × {4}</value>
+  </data>
   <data name="ImageViewTipsContent" xml:space="preserve">
     <value>Zoom in/out			SPACE
 Zoom to maximum		=
@@ -134,6 +169,41 @@ Full screen			ENTER</value>
   </data>
   <data name="ImageViewTipsTitle" xml:space="preserve">
     <value>TIPS FOR KEYBOARD USERS</value>
+  </data>
+  <data name="NeedVerify" xml:space="preserve">
+    <value>Because of your settings, we need to request the verification.</value>
+  </data>
+  <data name="NoPassword" xml:space="preserve">
+    <value>Please enter your password.</value>
+  </data>
+  <data name="NoUserName" xml:space="preserve">
+    <value>Please enter your user name.</value>
+  </data>
+  <data name="OK" xml:space="preserve">
+    <value>OK</value>
+  </data>
+  <data name="ParseByteException" xml:space="preserve">
+    <value>Can't parse the given string to a byte size.</value>
+  </data>
+  <data name="TorrentDownloading" xml:space="preserve">
+    <value>Start downloading...</value>
+  </data>
+  <data name="VerifyDeviceBusy" xml:space="preserve">
+    <value>Device is busy. Please try again later.</value>
+  </data>
+  <data name="VerifyDisabled" xml:space="preserve">
+    <value>Verification has been disabled by group policy. Please contact your administrator.</value>
+  </data>
+  <data name="VerifyFailed" xml:space="preserve">
+    <value>Verify failed. Plaese try again.</value>
+  </data>
+  <data name="VerifyFailedDialogTitle" xml:space="preserve">
+    <value>VERIFICATION FAILED</value>
+  </data>
+  <data name="VerifyNotConfigured" xml:space="preserve">
+    <value>Please set up a PIN first. 
+
+Go "Settings -&gt; Accounts - Sign-in options -&gt; PIN -&gt; Add" to do this.</value>
   </data>
   <data name="WrongCaptcha" xml:space="preserve">
     <value>The captcha was not entered correctly. Please try again.</value>
