--- a/ExViewer/Strings/zh-cn/Resources.resw
+++ b/ExViewer/Strings/zh-cn/Resources.resw
@@ -123,6 +123,88 @@
   <data name="AppDisplayName" xml:space="preserve">
     <value>E-Viewer</value>
   </data>
+  <data name="BackToWindow" xml:space="preserve">
+    <value>退出全屏</value>
+  </data>
+  <data name="BooleanOff" xml:space="preserve">
+    <value>关</value>
+  </data>
+  <data name="BooleanOn" xml:space="preserve">
+    <value>开</value>
+  </data>
+  <data name="Cancel" xml:space="preserve">
+    <value>取消</value>
+  </data>
+  <data name="ClearCacheDialogContent" xml:space="preserve">
+    <value>所有保存的画集将被删除！</value>
+  </data>
+  <data name="ClearCacheDialogTitle" xml:space="preserve">
+    <value>警告</value>
+  </data>
+  <data name="Exit" xml:space="preserve">
+    <value>退出</value>
+  </data>
+  <data name="FullScreen" xml:space="preserve">
+    <value>全屏</value>
+  </data>
+  <data name="GalleryDeleted" xml:space="preserve">
+    <value>选定的画集已删除。</value>
+  </data>
+  <data name="GallerySavedTo" xml:space="preserve">
+    <value>选定的画集已保存至给定位置。</value>
+  </data>
+  <data name="ImageFileInfo" xml:space="preserve">
+    <value>文件名：{0}
+大小：{1}
+尺寸：{2} × {3}</value>
+  </data>
+  <data name="ImageViewTipsContent" xml:space="preserve">
+    <value>缩放			空格
+放大至最大		=
+缩小至最小		-
+放大			]
+缩小			[
+平移/切换图片		方向键
+全屏			回车</value>
+  </data>
+  <data name="ImageViewTipsTitle" xml:space="preserve">
+    <value>键盘快捷键</value>
+  </data>
+  <data name="NeedVerify" xml:space="preserve">
+    <value>需要使用 Windows Hello 验证身份。</value>
+  </data>
+  <data name="NoPassword" xml:space="preserve">
+    <value>请输入密码。</value>
+  </data>
+  <data name="NoUserName" xml:space="preserve">
+    <value>请输入用户名。</value>
+  </data>
+  <data name="OK" xml:space="preserve">
+    <value>确定</value>
+  </data>
+  <data name="ParseByteException" xml:space="preserve">
+    <value>无法将给定字符串解析为字节数。</value>
+  </data>
+  <data name="TorrentDownloading" xml:space="preserve">
+    <value>开始下载种子……</value>
+  </data>
+  <data name="VerifyDeviceBusy" xml:space="preserve">
+    <value>设备忙，请稍后重试。</value>
+  </data>
+  <data name="VerifyDisabled" xml:space="preserve">
+    <value>验证已通过组策略禁用，请联系管理员。</value>
+  </data>
+  <data name="VerifyFailed" xml:space="preserve">
+    <value>验证失败，请重试。</value>
+  </data>
+  <data name="VerifyFailedDialogTitle" xml:space="preserve">
+    <value>验证失败</value>
+  </data>
+  <data name="VerifyNotConfigured" xml:space="preserve">
+    <value>请先设置 PIN。
+
+在 “设置 -&gt; 账户-&gt; 登陆选项 -&gt; PIN -&gt; 添加” 进行此项设定。</value>
+  </data>
   <data name="WrongCaptcha" xml:space="preserve">
     <value>验证码输入错误，请重试。</value>
   </data>
