enum setting localization
Former-commit-id: 2fd1ca8fe08e2ad1c47b761e50304fb7b5f66d22 [formerly a4a1d77924d02a41b2307a31ef9774f4be943039]
Former-commit-id: 4fa210c2b8cfb4aa6d80d8802ddbcf5fc5b09348

--- a/ExViewer/Strings/zh-cn/Settings.resw
+++ b/ExViewer/Strings/zh-cn/Settings.resw
@@ -207,4 +207,19 @@
   <data name="UseTagTranslation" xml:space="preserve">
     <value>标签中文翻译</value>
   </data>
+  <data name="ApplicationThemeDark" xml:space="preserve">
+    <value>深色</value>
+  </data>
+  <data name="ApplicationThemeLight" xml:space="preserve">
+    <value>浅色</value>
+  </data>
+  <data name="BooleanLeftToRight" xml:space="preserve">
+    <value>从左向右</value>
+  </data>
+  <data name="BooleanRightToLeft" xml:space="preserve">
+    <value>从右向左</value>
+  </data>
+  <data name="ReverseFlowDirection" xml:space="preserve">
+    <value>翻页方向</value>
+  </data>
 </root>
