--- a/ExViewer/Strings/en/Settings.resw
+++ b/ExViewer/Strings/en/Settings.resw
@@ -207,4 +207,19 @@
   <data name="UseTagTranslation" xml:space="preserve">
     <value>Use chinese translation of tags</value>
   </data>
+  <data name="ApplicationThemeDark" xml:space="preserve">
+    <value>Dark</value>
+  </data>
+  <data name="ApplicationThemeLight" xml:space="preserve">
+    <value>Light</value>
+  </data>
+  <data name="BooleanLeftToRight" xml:space="preserve">
+    <value>Left to right</value>
+  </data>
+  <data name="BooleanRightToLeft" xml:space="preserve">
+    <value>Right to left</value>
+  </data>
+  <data name="ReverseFlowDirection" xml:space="preserve">
+    <value>Flip direction</value>
+  </data>
 </root>
