--- a/ExClient/Strings/zh-cn/Category.resw
+++ b/ExClient/Strings/zh-cn/Category.resw
@@ -117,28 +117,40 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="AccountDenied" xml:space="preserve">
-    <value>此账户没有访问 Ex 绅士的权限。</value>
+  <data name="All" xml:space="preserve">
+    <value>全部</value>
   </data>
-  <data name="ClientDisposed" xml:space="preserve">
-    <value>该连接已被销毁。</value>
+  <data name="ArtistCG" xml:space="preserve">
+    <value>Artist CG</value>
   </data>
-  <data name="DefaultTitle" xml:space="preserve">
-    <value>画集标题</value>
+  <data name="AsianPorn" xml:space="preserve">
+    <value>Asian Porn</value>
   </data>
-  <data name="DefaultUploader" xml:space="preserve">
-    <value>上传者</value>
+  <data name="Cosplay" xml:space="preserve">
+    <value>Cosplay</value>
   </data>
-  <data name="ExpungedTorrent" xml:space="preserve">
-    <value>此种子已经被删除。</value>
+  <data name="Doujinshi" xml:space="preserve">
+    <value>Doujinshi</value>
   </data>
-  <data name="OnlyIpv4" xml:space="preserve">
-    <value>仅支持 IPv4 地址。</value>
+  <data name="GameCG" xml:space="preserve">
+    <value>Game CG</value>
   </data>
-  <data name="WrongAccountInfo" xml:space="preserve">
-    <value>用户名或密码错误。</value>
+  <data name="ImageSet" xml:space="preserve">
+    <value>Image Set</value>
   </data>
-  <data name="WrongCaptcha" xml:space="preserve">
-    <value>验证码输入错误，请重试。</value>
+  <data name="Manga" xml:space="preserve">
+    <value>Manga</value>
+  </data>
+  <data name="Misc" xml:space="preserve">
+    <value>Misc</value>
+  </data>
+  <data name="NonH" xml:space="preserve">
+    <value>Non-H</value>
+  </data>
+  <data name="Unspecified" xml:space="preserve">
+    <value>未指定</value>
+  </data>
+  <data name="Western" xml:space="preserve">
+    <value>Western</value>
   </data>
 </root>
