apiInfo; bug fix for cmdbar
Former-commit-id: 7b863705646c79d7b8ef7032843524577c9f50e3 [formerly fe3fbde8b193e722a100a33266eaf6ace85c42d2]
Former-commit-id: 12d750c773e9f83a4549f315254d2abd71c0ea04

--- a/ExViewer/Strings/zh-cn/Resources.resw
+++ b/ExViewer/Strings/zh-cn/Resources.resw
@@ -178,7 +178,7 @@
     <value>选定的画集已删除。</value>
   </data>
   <data name="GalleryPageCommentAuthorFormatString" xml:space="preserve">
-    <value> {0}</value>
+    <value>{0}</value>
   </data>
   <data name="GalleryPageCommentEditedFormatString" xml:space="preserve">
     <value>最后编辑于 {0}</value>
@@ -187,7 +187,7 @@
     <value>上传者评论</value>
   </data>
   <data name="GalleryPageCommentPostedFormatString" xml:space="preserve">
-    <value>发表于 {0}</value>
+    <value>发布于 {0}</value>
   </data>
   <data name="GalleryPageCommentScoreFormatString" xml:space="preserve">
     <value>评分 {0:+#0;-#0}</value>
